# aiosend_mod_bot

./: .gitignore  pyproject.toml
bot/: __main__.py  config_reader.py  filters.py  utils.py
bot/handlers/: __init__.py  moderation.py  service.py  user_handlers.py
